# cpp_hackathon

./: .gitignore  CMakeLists.txt  PW.sln  PlantWorld.code-workspace  README.md  bootstrap.bat  bootstrap.sh  build.bat  build.sh  conanfile.txt  prepare.bat  prepare.sh  requirements.txt
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: cmake.yml
PWCommon/: CMakeLists.txt  EchoMessageRequest.cpp  EchoMessageRequest.h  EchoMessageResponse.cpp  EchoMessageResponse.h  GetInventoryMessageRequest.cpp  GetInventoryMessageRequest.h  GetInventoryMessageResponse.cpp  GetInventoryMessageResponse.h  PWBaseMessage.cpp  PWBaseMessage.h  PWBaseRequest.cpp  PWBaseRequest.h  PWBaseResponse.cpp  PWBaseResponse.h  PWCommDef.h  PWCommon.vcxproj  PWCommon.vcxproj.filters  PWException.cpp  PWException.h  PWMessageSerializationFactory.cpp  PWMessageSerializationFactory.h  PWMessageSerializer.cpp  PWMessageSerializer.h  PWMessageTypes.h  base64.hpp  stdafx.cpp  stdafx.h
PWGRPCService/: CMakeLists.txt  Client.cpp  PWGRPCService.h  Server.cpp
PWServer/: CMakeLists.txt  InventoryItem.h  PWInventory.cpp  PWInventory.h  PWServer.cpp  PWServer.h  PWServer.vcxproj  PWServer.vcxproj.filters  inventory.json  main.cpp  stdafx.cpp  stdafx.h
PWTests/: CMakeLists.txt  PWTests.cpp  PWTests.vcxproj  PWTests.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
cmake/: CodeCoverage.cmake
conan/profiles/: MinGW
server/: app.py
server/tests/: app_tests.py
